Fixed spacing issue

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -71,6 +71,7 @@ article {
   clear: both;
   width: 90%;
   margin: auto;
+  padding: 2em;
 }
 article li {
   margin-top: 2em;
